openshift/vdyp-web-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: "#{NAMESPACE}#"
  name: "vdyp-web-ui-deployment-#{ENV}#"
spec:
  selector:
    matchLabels:
      app: vdyp-web-ui-#{ENV}#
  replicas: 2
  template:
    metadata:
      labels:
        app: vdyp-web-ui-#{ENV}#
        project: vdyp-#{ENV}#
    spec:
      containers:
        - name: container
          image: >-
            ghcr.io/vividroyjeong/nr-vdyp-vdyp-web-ui:#{TAG}#
          ports:
            - containerPort: #{ACTIVE_PORT}#
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 200m
              memory: 400Mi
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
