openshift/vdyp-web-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vdyp-web-ui-service-#{ENV}#
  namespace: "#{NAMESPACE}#"
spec:
  selector:
    app: vdyp-web-ui-#{ENV}#
  ports:
    - protocol: TCP
      port: #{TARGET_PORT}#
      targetPort: #{ACTIVE_PORT}#
