openshift/vdyp-web-ui-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: vdyp-web-ui-route-#{ENV}#
  namespace: "#{NAMESPACE}#"
  labels: {}
spec:
  to:
    kind: Service
    name: vdyp-web-ui-service-#{ENV}#
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    destinationCACertificate: ""
  port:
    targetPort: #{ACTIVE_PORT}#
