openshift/vdyp-web-ui-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: -egress-#{ENV}#
  namespace: "#{NAMESPACE}#"
spec:
  podSelector:
    matchLabels:
      app: vdyp-web-ui-#{ENV}#
  policyTypes:
    - Egress
  egress:
    - {}
